--- a/estilo/style.css
+++ b/estilo/style.css
@@ -28,7 +28,8 @@ body{
 section{
     height: 100vh;
     width: 100vw;
-    background: url('../imagem/hambuguer2.jpg') no-repeat left center; 
+    background: url('../imagem/hambuguer2.jpg') no-repeat left center;
+    background-size: cover; 
 }
 
 #menuham{
