--- a/estilo/style.css
+++ b/estilo/style.css
@@ -67,7 +67,6 @@ nav a:hover{
 }
 
 h1{
-    top: 20px;
     left: 4%;
     font-size: 2em;
     position: relative;
@@ -76,15 +75,13 @@ h1{
 }
 
 img{
-    left: 20%;
-    top: 40px;
+    left: 10%;
     position: relative;
 }
 
 #reservar{
-    top: 7%;
-    left: 10%;
-    width: 150px;
+    left: 5%;
+    width: 30%;
     margin: 20px;
     display: block;
     padding: 10px;
