--- a/estilo/style.css
+++ b/estilo/style.css
@@ -28,7 +28,7 @@ body{
 section{
     height: 100vh;
     width: 100vw;
-    background: url('../imagem/hambuguer2.jpg') no-repeat left center;
+    background: url('../imagem/hamburguer3.jpg') no-repeat left center;
     background-size: cover; 
 }
 
@@ -92,8 +92,8 @@ img{
     border: 2px solid gray;
 }
 
-a:hover{
+#reservar:hover{
     border: 0px;
     color: black;
-    background-color: rgb(183, 178, 178);
+    background-color: gray;
 }
