--- a/estilo/style.css
+++ b/estilo/style.css
@@ -22,14 +22,14 @@
 body{
     height: 100vh;
     width: 100vw;
-    background-color: rgb(148, 143, 143);
 }
 
 section{
     height: 100vh;
     width: 100vw;
-    background: url('../imagem/hamburguer3.jpg') no-repeat left center;
-    background-size: cover; 
+    background: url('../imagem/hamburguer3.jpg') no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 #menuham{
