--- a/estilo/mediaquery.css
+++ b/estilo/mediaquery.css
@@ -61,11 +61,13 @@
     }
 
    #localização h1{
+       top: 8%;
        width: 50vw;
        margin: auto;
        display:block;
-       padding: 3px;
+       padding: 5px;
        color: white;
+       position: relative;
        text-align: center;
        background-color: gray;
        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.581);
@@ -75,6 +77,7 @@
     width: 50vw;
     height: 50vh;
     display: block;
+    padding: 50px;
     margin: auto;
    }
 }
