--- a/estilo/sobrenos.css
+++ b/estilo/sobrenos.css
@@ -1,8 +1,14 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
+
 ::-webkit-scrollbar{
    width: 0px;
    height: 0px;
+}
+
+:root{
+   --fontpadrao: 'Italianno';
 }
 
 *{
@@ -10,9 +16,74 @@
    padding: 0px;
 }
 
+@media screen and (max-width:577px) {
+   #menuham{
+      left: 45%;
+      padding: 10px;
+      font-size: 2em;
+      position: relative;
+      text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.173);
+   }
+
+   #menuham:hover{
+      color: rgb(139, 126, 126);
+   }
+
+   nav#itens {
+      padding: 5px;
+      text-align: center;
+      background-color: grey;
+  }
+
+  nav#itens a{
+     color: white;
+     margin: 10px;
+     text-decoration: none;
+  }
+
+  #itens a:hover{
+    color: black;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.173);
+  }
+
+  h1{
+     font-size: 3em;
+     padding: 15px;
+     text-align: center;
+     font-family: var(--fontpadrao);
+     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.173);
+  }
+
+  p{
+   width: 85%;
+   margin: auto;
+   text-indent: 2em;
+   line-height: 2em;
+   text-align: justify;
+   margin-bottom: 2em;
+   font-family: Arial, Helvetica, sans-serif;
+   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.078);
+  }
+
+  footer{
+   margin-bottom: -40px;
+   background-color: grey;
+  }
+
+  footer p{
+   text-align: center;
+  }
+}
+
+@media screen and (min-width:577px) {
+   
 body{
    height: 100vh;
    width: 100vw;
+}
+
+#menuham{
+   display: none;
 }
 
 nav#itens{
@@ -43,8 +114,10 @@ section{
 }
 
 h1{
+   font-size: 3em;
    padding: 20px;
    text-align: center;
+   font-family: var(--fontpadrao);
    text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -90,4 +163,6 @@ p{
 footer p{
    text-align: center;
    background-color: gray;
+}
+
 }
