--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,12 +1,17 @@
 @charset "UTF-8";
 /*Versão Mobile*/
 
+/*fonte italiano*/
 @import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
+
+/*fonte tocadoloBo*/
+@import url('https://fonts.googleapis.com/css2?family=Gwendolyn:wght@400;700&display=swap');
 
 :root{
     --cor1:#EB4E1E;
     --cor2:#E8C625;
-    --fontpadrao: 'Italianno';
+    --fontitaliano: 'Italianno';
+    --fonttitulo:'Gwendolyn';
 }
 
 *{
@@ -52,7 +57,7 @@ nav{
     position: relative;
     border-radius: 10px;
     font-size: 1.4em;
-    font-family: var(--fontpadrao);
+    font-family: var(--fontitaliano);
     background-color: #eb4e1e51;
 }
 
@@ -65,20 +70,25 @@ nav#itens > a{
     text-decoration: none;
 }
 
-#itens a:hover {
+#itens a:hover{
     color: black;
-    padding: 10px;
-    transition: 0.5s;
-    background-color:#e8c82563;
+    background-color: #e8c82562;
+
 }
 
 #texto{
-    top: 10%;
-    left: 22%;
-    font-size: 1.4em;
+    top: 40%;
+    left: 50%;
+    padding: 10px;
+    font-size: 2em;
     color: var(--cor1);
     position: absolute;
-    font-family: var(--fontpadrao);
+    text-align: center;
+    border-radius: 10px;
+    font-family: var(--fonttitulo);
+    transform: translate(-45%,-50%);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.589);
+    background-color: rgba(128, 128, 128, 0.537);
 }
 
 
@@ -90,14 +100,16 @@ img{
 #reservar{
     left: 10%;
     top: 110%;
-    color: white;
+    margin: 10px;
     padding: 10px;
+    color: white;
     position: absolute;
-    font-weight: bolder;
+    font-size: 20px;
     border-radius: 10px;
     text-decoration: none;
-    font-family:var(--fontpadrao);
-    border: 2px solid rgb(101, 99, 99);
+    border: 2px solid gray;
+    font-family:Arial, Helvetica, sans-serif;
+    background-color: rgba(128, 128, 128, 0.642);
 }
 
 #reservar:hover{
