--- a/estilo/chefs.css
+++ b/estilo/chefs.css
@@ -30,10 +30,14 @@ body{
     position: relative;
 }
 
+#menuham:hover{
+    color: gray;
+}
+
 nav{
     width: 100%;
     margin: auto;
-    font-size: 1.4em;
+    font-size: 1.2em;
     text-align: center;
     font-family: var(--fonttitulo);
     background-color: grey;
@@ -50,17 +54,12 @@ nav a{
 
 nav a:hover{
     color: black;
-    background-color: rgb(196, 192, 192);
 }
 
 main{
     width: 80%;
     margin: auto;
     display: block;
-}
-
-#menuham:hover{
-    color: gray;
 }
 
 h1{
@@ -97,4 +96,28 @@ footer p {
 
 footer{
     background-color: gray;
+}
+
+@media screen and (min-width:577px) {
+    #menuham{
+        display: none;
+    }
+
+    nav{
+        padding: 3px;
+        text-align: right;
+    }
+
+    body{
+        background-color: rgb(196, 192, 192);
+    }
+
+    main{
+        max-width: 900px;
+        background-color: white;
+    }
+
+    img{
+        width: 450px;
+    }
 }
