--- a/estilo/chefs.css
+++ b/estilo/chefs.css
@@ -77,9 +77,10 @@ h2{
 }
 
 img{
-   display: block;
-   margin: auto;
-   width: 80%;
+    width: 80%;
+    margin: auto;
+    display: block;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 p{
