--- a/estilo/style.css
+++ b/estilo/style.css
@@ -39,9 +39,9 @@ main{
 }
 
 #menuham{
-    text-align: center;
+    display: inline;
+    padding: 5px;
     color: var(--cor2);
-    background-color: var(--cor1);
 }
 
 #menuham span{
@@ -53,18 +53,20 @@ main{
 }
 
 #menu{
+    width: 25vw;
     display: block;
-    background-color: #262626f0;
+    text-align: center;
+    background-color: rgba(128, 128, 128, 0.685);
 }
 
 #menu a{
     display: block;
     padding: 5px;
+    color: black;
     font-size: 1.1em;
-    color: white;
-    text-align: center;
     text-decoration: none;
     font-family: var(--fontnav);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 nav a:hover{
@@ -73,7 +75,7 @@ nav a:hover{
 }
 
 #titulo{ 
-    top: 46%;
+    top: 20%;
     left: 50%;
     padding: 5px;
     color: var(--cor2);
@@ -82,10 +84,11 @@ nav a:hover{
     font-family: var(--fonttitulo);
     background-color: #262626e9;
     transform: translate(-50%, -50%);
+    text-shadow: 2px 2px 4px #bf36047f;
 }
 
 #reserva{
-    top: 60%;
+    top: 35%;
     left: 50%;
     position: absolute;
     transform: translate(-50%,-50%);
@@ -93,24 +96,25 @@ nav a:hover{
 
 #reserva a{
     padding: 12px;
-    color: var(--cor2);
+    color: black;
     font-size: 1.1em;
     border-radius: 8px;
     text-decoration: none;
     font-family: var(--fontnav);
     border: 2px solid rgb((128, 128, 128, 0.534));
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
     background-color: rgba(128, 128, 128, 0.816);
 }
 
 #reserva a:hover{
     border: 0px;
     transition: 0.5s;
-    color: #262626;
+    color: black;
     background-color: var(--cor2);
 }
 
 #mapa{
-    top: 95%;
+    top: 80%;
     left: 50%;
     position: absolute;
     transform: translate(-50%,-50%);
