--- a/estilo/style.css
+++ b/estilo/style.css
@@ -33,18 +33,18 @@ body{
 }
 
 main{
-    height: 100vh;
+    height: 50vh;
     width: 100vw;
 
 }
 
 #menuham{
     display: inline;
-    padding: 5px;
     color: var(--cor2);
 }
 
 #menuham span{
+    padding: 10px;
     font-size: 2em;
 }
 
@@ -53,29 +53,29 @@ main{
 }
 
 #menu{
-    width: 25vw;
+    width: 100vw;
+    margin: auto;
     display: block;
     text-align: center;
-    background-color: rgba(128, 128, 128, 0.685);
 }
 
 #menu a{
-    display: block;
-    padding: 5px;
-    color: black;
+    padding: 10px;
+    color: white;
     font-size: 1.1em;
     text-decoration: none;
     font-family: var(--fontnav);
     text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
-nav a:hover{
+#menu >a:hover{
+    transition: 0.5s;
     color: black;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.681);
 }
 
 #titulo{ 
-    top: 20%;
+    top: 22%;
     left: 50%;
     padding: 5px;
     color: var(--cor2);
@@ -114,7 +114,7 @@ nav a:hover{
 }
 
 #mapa{
-    top: 80%;
+    top: 70%;
     left: 50%;
     position: absolute;
     transform: translate(-50%,-50%);
