--- a/estilo/style.css
+++ b/estilo/style.css
@@ -77,7 +77,9 @@ main{
 #titulo{ 
     top: 22%;
     left: 50%;
+    width: 80vw;
     padding: 5px;
+    text-align: center;
     color: var(--cor2);
     position: absolute;
     border-radius: 10px;
@@ -88,7 +90,7 @@ main{
 }
 
 #reserva{
-    top: 35%;
+    top: 38%;
     left: 50%;
     position: absolute;
     transform: translate(-50%,-50%);
