--- a/estilo/mediaquery.css
+++ b/estilo/mediaquery.css
@@ -5,78 +5,91 @@
    Desktop: 1025 até 1440px
    Telas Grande: minimo de 1441px */
 
-@media screen and (min-width:577px) {
-    #menuham{
-       display: none;
-    }
-
-    nav{
-     display: block;
-     height: 20px;
-     width: 98vw;
-     padding: 15px;
-     text-align: right;
-     background-color: rgba(0, 0, 0, 0.607);
-    }
-
-    nav#itens a{
-       display: inline;
-       width: 70px;
-       text-align: center;
-    }
-
-    section{
-        width: 100vw;
-        height: 90vh;
-        background: url(../imagem/fundocomida.jpg) no-repeat;
+@media screen and (min-width:577px){
+    body{
+        background: url('../imagem/fundocomida.jpg') no-repeat;
         background-size: cover;
         background-attachment: fixed;
     }
 
-    #texto{
-        top: 50%;
-        left: 50%;
-        display: block;
-        padding: 20px;
-        font-size: 2em;
-        text-align: center;
-        border-radius: 20px;
-        transform: translate(-50%,-50%);
-        text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.451);
-        background-color: rgba(128, 128, 128, 0.674);
+    #menuham{
+        display: none;
     }
 
-    #lobo{
-        left: 30%;
+    #menu{
         display: block;
+        text-align: right;
     }
 
-    #reservar{
-        position: absolute;
-        top: 110%;
+    #titulo{ 
+        top: 25%;
         left: 20%;
-        border: 0px;
-        background-color: rgba(128, 128, 128, 0.674);
+        width: 50vw;
+        padding: 5px;
+        text-align: center;
+        color: var(--cor2);
+        position: absolute;
+        font-family: var(--fonttitulo);
+        transform: translate(-50%, -50%);
+        text-shadow: 2px 2px 4px #06060684;
+        background-color: rgba(128, 128, 128, 0.715);
     }
 
-   #localização h1{
-       top: 8%;
-       width: 50vw;
-       margin: auto;
-       display:block;
-       padding: 5px;
-       color: white;
-       position: relative;
-       text-align: center;
-       background-color: gray;
-       text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.581);
-   }
+    #reserva{
+        display: none;
+    }
 
-   iframe{
-    width: 50vw;
-    height: 50vh;
-    display: block;
-    padding: 50px;
-    margin: auto;
-   }
+    #formulario{
+        top: 15%;
+        left: 58%;
+        width: 220px;
+        display: block;
+        height: 310px;
+        padding: 20px;
+        position: absolute;
+        border-radius: 10px;
+        background-color: #d96704d3;
+    }
+
+    #formulario input{
+        border: 0px;
+        padding: 5px;
+        border-radius: 8px;
+    }
+
+    #formulario label{
+        padding: 4px;
+        display: block;
+    }
+
+    .botao{
+        width: 95%;
+        margin: 3px;
+        padding: 8px;
+        position: relative;
+        border-radius: 10px;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.632);
+    }
+
+    .botao:hover{
+        color: white;
+        background-color: rgba(128, 128, 128, 0.786);
+    }
+
+    #mapa{
+        top: 120%;
+        left: 50%;
+        width: 80vw;
+        position: absolute;
+        transform: translate(-50%,-50%);
+    }
+
+    #mapa h2{
+        background-color: #ed9222cf;
+    }
+
+    iframe{
+        width: 80vw;
+        height: 50vh;
+    }
 }
