--- a/estilo/chefs.css
+++ b/estilo/chefs.css
@@ -1,12 +1,15 @@
-@charset "UTF-8";
+@charset "UTF-8"; /*Versão Mobile*/
 
-
+@import url('https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700;800&display=swap');
 
 :root{
-    --fonttitulo:'Italianno';
-}
+    --cor1:#262626;
+    --cor2:#BF3604;
+    --cor3:#D96704;
+    --cor4:#ed9122;
 
-/*Versão Mobile*/
+    --fonttitulo:'Tillana';
+}
 
 *{
     margin: 0px;
@@ -23,15 +26,22 @@ body{
     width: 100vw;
 }
 
+header{
+    background-color: var(--cor1);
+}
+
 #menuham{
     left: 45%;
     padding: 5px;
     font-size: 2em;
+    color: var(--cor2);
     position: relative;
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 #menuham:hover{
-    color: gray;
+    transition: 0.5s;
+    color: var(--cor4);
 }
 
 nav{
@@ -40,20 +50,20 @@ nav{
     font-size: 1.2em;
     text-align: center;
     font-family: var(--fonttitulo);
-    background-color: grey;
 }
 
 nav a{
     margin: 10px;
     padding: 2px;
-    color: white;
+    color: var(--cor2);
     font-size: 1.2em;
     text-decoration: none;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.226);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 nav a:hover{
-    color: black;
+    transition: 0.5s;
+    color: var(--cor4);
 }
 
 main{
@@ -67,13 +77,13 @@ h1{
     text-align: center;
     padding-top: 30px;
     font-family: var(--fonttitulo);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.226);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.252);
 }
 
 h2{
     padding: 10px;
     text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.226);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.252);
 }
 
 img{
@@ -88,15 +98,16 @@ p{
     text-align: justify;
     text-indent: 2em;
     line-height: 2em;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.226);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.252);
 }
 
 footer p {
+    color: var(--cor4);
     text-align: center;
 }
 
 footer{
-    background-color: gray;
+    background-color: var(--cor1);
 }
 
 @media screen and (min-width:577px) {
@@ -105,20 +116,25 @@ footer{
     }
 
     nav{
-        padding: 3px;
+        padding: 5px;
         text-align: right;
     }
 
     body{
-        background-color: rgb(196, 192, 192);
+        background-color: var(--cor1);
     }
 
     main{
         max-width: 900px;
         background-color: white;
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.732);
     }
 
     img{
         width: 450px;
+    }
+
+    p{
+        padding: 30px;
     }
 }
