--- a/estilo/menu.css
+++ b/estilo/menu.css
@@ -109,3 +109,22 @@ tbody tr:nth-child(even){
 tbody tr:nth-child(odd){
     background-color: white;
 }
+
+@media screen and (min-width:577px) {
+    #menuham{
+        display: none;
+    }
+
+    #itens{
+        text-align: right;
+    }
+
+    table{
+        width: 800px;
+        box-shadow: 0px 0px 15px 4px #0000005c;
+    }
+
+    td{
+        padding: 10px;
+    }
+}
