--- a/estilo/sobrenos.css
+++ b/estilo/sobrenos.css
@@ -1,13 +1,19 @@
-@charset "UTF-8";
+@charset "UTF-8";  /*Versão Mobile*/
 
+@import url('https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700;800&display=swap');
+
+:root{
+   --cor1:#262626;
+   --cor2:#BF3604;
+   --cor3:#D96704;
+   --cor4:#ed9122;
+
+   --fonttitulo:'Tillana';
+}
 
 ::-webkit-scrollbar{
    width: 0px;
    height: 0px;
-}
-
-:root{
-   --fontpadrao: 'Italianno';
 }
 
 *{
@@ -15,45 +21,56 @@
    padding: 0px;
 }
 
-@media screen and (max-width:577px) {
-   #menuham{
-      left: 45%;
-      padding: 10px;
-      font-size: 2em;
-      position: relative;
-      text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.173);
-   }
+body{
+   height: 100vh;
+   width: 100vw;
+}
 
-   #menuham:hover{
-      color: rgb(139, 126, 126);
-   }
+header{
+   text-align: center;
+   background-color: var(--cor1);
+}
 
-   nav#itens {
-      padding: 5px;
-      text-align: center;
-      background-color: grey;
-  }
+#menuham{
+   padding: 10px;
+   font-size: 2em;
+   position: relative;
+   color: var(--cor2);
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
+}
 
-  nav#itens a{
-     color: white;
-     margin: 10px;
-     text-decoration: none;
-  }
+#menuham:hover{
+   transition: 0.5s;
+   color: var(--cor3);
+}
 
-  #itens a:hover{
-    color: black;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.173);
-  }
+nav#itens {
+   padding: 5px;
+   text-align: center;
+}
 
-  h1{
-     font-size: 3em;
-     padding: 15px;
-     text-align: center;
-     font-family: var(--fontpadrao);
-     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.173);
-  }
+nav#itens a{
+   margin: 10px;
+   font-size: 1.3em;
+   color: var(--cor2);
+   text-decoration: none;
+   font-family: var(--fonttitulo);
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
+}
 
-  p{
+#itens a:hover{
+   transition: 0.5s;
+   color: var(--cor4);
+}
+
+h1{
+   padding: 15px;
+   text-align: center;
+   font-family: var(--fonttitulo);
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
+}
+
+p{
    width: 85%;
    margin: auto;
    text-indent: 2em;
@@ -61,24 +78,30 @@
    text-align: justify;
    margin-bottom: 2em;
    font-family: Arial, Helvetica, sans-serif;
-   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.078);
-  }
-
-  footer{
-   margin-bottom: -40px;
-   background-color: grey;
-  }
-
-  footer p{
-   text-align: center;
-  }
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.303);
 }
 
-@media screen and (min-width:577px) {
-   
+footer{
+   margin-bottom: -40px;
+   background-color: var(--cor1);
+}
+
+footer p{
+   color: var(--cor4);
+   text-align: center;
+}
+
+@media screen and (min-width:840px) {
+
 body{
-   height: 100vh;
-   width: 100vw;
+   background-color: var(--cor1);
+}
+
+main{
+   width: 900px;
+   margin: auto;
+   background-color: white;
+   box-shadow: 0px 0px 15px 4px #0000005c;
 }
 
 #menuham{
@@ -86,50 +109,47 @@ body{
 }
 
 nav#itens{
-   height: 15px;
    width: 98vw;
-   margin: auto;
-   display: block;
    padding: 10px;
    text-align: right;
-   background-color: rgba(0, 0, 0, 0.305);
+   background-color: var(--cor1);
 }
 
 nav a{
    padding: 7px;
-   color: white;
    text-decoration: none;
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 nav a:hover{
-   color: black;
-   transition: 0.7s;
-   background-color: rgba(0, 0, 0, 0.292);
+   transition: 0.5s;
 }
 
 section{
-   width: 80vw;
+   width: 100%;
    margin: auto;
 }
 
 h1{
-   font-size: 3em;
-   padding: 20px;
+   width: 95%;
+   font-size: 2em;
+   padding: 23px;
    text-align: center;
-   font-family: var(--fontpadrao);
-   text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.1);
+   font-family: var(--fonttitulo);
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.314);
 }
 
 p{
-   text-indent: 2em;
+   width: 80%;
+   padding: 23px;
    text-align: justify;
    line-height: 2em;
-   margin-bottom: 2em;
    font-family: Arial, Helvetica, sans-serif;
-   text-shadow: 2px 3px 2px rgba(0, 0, 0, 0.1);
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.278);
 }
 
 #fundo1{
+   height: 350px;
    background: url(../imagem/restaurante.jpg);
    background-attachment: fixed;
    background-size: cover;
@@ -137,6 +157,7 @@ p{
 }
 
 #fundo2{
+   height: 350px;
    background: url(../imagem/restaurante1.jpg);
    background-attachment: fixed;
    background-size: cover;
@@ -147,21 +168,15 @@ p{
    width: 100%;
    height: 450px;
    margin-bottom: 20px;
+   box-shadow: 0px 0px 15px 4px #00000026;
 }
 
 .imgfundo p{
+   top: 15%;
+   position: relative;
    width: 60%;
-   height: 95%;
-   display: block;
    padding: 10px;
    color: white;
-   text-indent: 0px;
    background-color: rgba(0, 0, 0, 0.556);
 }
-
-footer p{
-   text-align: center;
-   background-color: gray;
-}
-
 }
