--- a/estilo/style.css
+++ b/estilo/style.css
@@ -8,7 +8,7 @@
 :root{
     --cor1:#262626;
     --cor2:#BF3604;
-    --cor2:#D96704;
+    --cor3:#D96704;
     --cor4:#ed9122;
 
     --fontnav:Tillana;
@@ -62,8 +62,8 @@ main{
 #menu a{
     display: inline;
     padding: 10px;
-    color: white;
-    font-size: 1.2em;
+    color: var(--cor2);
+    font-size: 1.3em;
     text-decoration: none;
     font-family: var(--fontnav);
     text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
@@ -71,12 +71,10 @@ main{
 
 #menu >a:hover{
     transition: 0.5s;
-    color: black;
-    background-color: var(--cor4);
+    color: var(--cor4);
 }
 
 #formulario{
-
     display: none;
     font-weight: bold;
     font-family: var(--fontnav);
@@ -102,6 +100,7 @@ main{
 #reserva{
     top: 38%;
     left: 50%;
+    padding: 10px;
     position: absolute;
     transform: translate(-50%,-50%);
 }
@@ -115,14 +114,14 @@ main{
     font-family: var(--fontnav);
     border: 2px solid rgb((128, 128, 128, 0.534));
     text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
-    background-color: rgba(128, 128, 128, 0.816);
+    background-color: #bf3604ce;
 }
 
 #reserva a:hover{
     border: 0px;
     transition: 0.5s;
     color: black;
-    background-color: var(--cor2);
+    background-color: var(--cor4);
 }
 
 #mapa{
