--- a/estilo/chefs.css
+++ b/estilo/chefs.css
@@ -45,18 +45,17 @@ header{
 }
 
 nav{
-    width: 100%;
+    width: 98%;
     margin: auto;
-    font-size: 1.2em;
+    margin: 10px;
     text-align: center;
     font-family: var(--fonttitulo);
 }
 
 nav a{
     margin: 10px;
-    padding: 2px;
     color: var(--cor2);
-    font-size: 1.2em;
+    font-size: 1.3em;
     text-decoration: none;
     text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
@@ -77,13 +76,13 @@ h1{
     text-align: center;
     padding-top: 30px;
     font-family: var(--fonttitulo);
-    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.252);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 h2{
     padding: 10px;
     text-align: center;
-    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.252);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 img{
