--- a/estilo/reserva.css
+++ b/estilo/reserva.css
@@ -1,9 +1,25 @@
-@charset "UTF-8";
-/* Versão Mobile*/
+@charset "UTF-8"; /* Versão Mobile*/
+
+@import url('https://fonts.googleapis.com/css2?family=Tillana:wght@400;500;600;700;800&display=swap');
+
+:root{
+    --cor1:#262626;
+    --cor2:#BF3604;
+    --cor3:#D96704;
+    --cor4:#ed9122;
+
+    --fontnav: 'Tillana';
+}
 
 *{
     margin: 0px;
     padding: 0px;
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--cor1);
 }
 
 ::-webkit-scrollbar{
@@ -13,36 +29,37 @@
 
 #menuham{
     padding: 4px;
+    display: block;
     font-size: 2em;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.193);
+    color: var(--cor2);
+    text-align: center;
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 #menuham:hover{
-    color: white;
-}
-
-body{
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(64, 57, 57, 0.521);
+    transition: 0.5s;
+    color: var(--cor4);
 }
 
 #itens{
     width: 100vw;
+    margin: 10px;
     text-align: center;
     font-size: 1.3em;
     font-family: 'Italianno';
 }
 
 #itens a{
-    color: white;
-    padding: 10px;
+    margin: 10px;
+    color: var(--cor2);
     text-decoration: none;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.49);
+    font-family: var(--fontnav);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 #itens a:hover{
-    color: black;
+    transition: 0.5s;
+    color: var(--cor4);
 }
 
 main{
@@ -52,7 +69,8 @@ main{
 
 h3{
     text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.278);
+    font-family: var(--fontnav);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 #Imagem{
@@ -64,44 +82,51 @@ h3{
 }
 
 #login{
-    top: 50%;
+    top: 60%;
     left: 50%;
-    width: 250px;
-    height: 500px;
+    width: 90vw;
+    height: 100vh;
     position: relative;
     border-radius: 10px;
-    background-color: white;
     transform: translate(-50%, -50%);
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.867);
+    
 }
 
 #formulario{
-    padding: 5px;
+    padding: 20px;
+    background-color: white;
     border-radius:0px 0px 10px 10px;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.867);
 }
 
 #formulario div{
    margin-top: 10px;
-   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.251);
+   font-family: var(--fontnav);
+   text-shadow:2px 2px 4px rgba(0, 0, 0, 0.222);
 }
 
 input{
+    width: 60vw;
+    padding: 5px;
     border-radius: 5px;
-    padding: 2px;
+    font-family: var(--fontnav);
     border: 1px solid black;
 }
 
 .botao{
     border: 0px;
     width: 100%;
-    padding: 5px;
+    padding: 10px;
     color: white;
     margin-top: 8px;
     border-radius: 8px;
-    background-color:rgba(128, 128, 128, 0.779);
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.427);
+    font-family: var(--fontnav);
+    background-color:var(--cor2);
+    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
 .botao:hover{
+    transition: 0.5s;
     color: black;
+    background-color: var(--cor4);
 }
