--- a/estilo/mediaquery.css
+++ b/estilo/mediaquery.css
@@ -48,7 +48,7 @@
         background-color: rgba(128, 128, 128, 0.715);
     }
 
-    #reserva{
+    #botaoreserva{
         display: none;
     }
 
