--- a/estilo/style.css
+++ b/estilo/style.css
@@ -35,7 +35,6 @@ body{
 main{
     height: 100vh;
     width: 100vw;
-
 }
 
 #menuham{
@@ -97,27 +96,25 @@ main{
     transform: translate(-50%, -50%);
 }
 
-#reserva{
-    top: 38%;
+#botaoreserva{
+    top: 40%;
     left: 50%;
-    padding: 10px;
     position: absolute;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #bf3604ce;
     transform: translate(-50%,-50%);
 }
 
-#reserva a{
-    padding: 12px;
-    color: black;
-    font-size: 1.1em;
-    border-radius: 8px;
-    text-decoration: none;
-    font-family: var(--fontnav);
-    border: 2px solid rgb((128, 128, 128, 0.534));
-    text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
-    background-color: #bf3604ce;
+#botaoreserva a{
+  color: black;
+  font-size: 1.2em;
+  text-decoration: none;
+  font-family: var(--fonttitulo);
+  text-shadow:2px 2px 4px rgba(0, 0, 0, 0.414);
 }
 
-#reserva a:hover{
+#botaoreserva:hover{
     border: 0px;
     transition: 0.5s;
     color: black;
